Added one more Get API to read data from database.

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -10,5 +10,8 @@
         "Issuer": "https://localhost:7237/",
         "Audience": "https://localhost:7237/"
     },
+    "ConnectionString": {
+        "PracticeDb": "Server=DESKTOP-86EN9CI;Database=Practice;User Id=sa;Password=123;"
+    },
     "AllowedHosts": "*"
 }
